[package]
name = "poster"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "MQTT 5 client library written in Rust."
repository = "https://github.com/Chylynsky/poster-rs"
categories = ["network-programming", "mqtt", "networking", "async", "client"]

[dependencies]
either = "1.8"
futures = "0.3"
bytes = "1.2"
derive_builder = "0.11"
