[package]
name = "poster"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "MQTTv5 client library written in Rust."
repository = "https://github.com/Chylynsky/poster-rs"
authors = ["Chylynsky"]
keywords = [
    "mqtt", 
    "async", 
    "client", 
    "runtime-agnostic", 
    "non-blocking"
]
categories = ["asynchronous", "network-programming"]
license = "MIT"

[dependencies]
either = "1.8"
futures = "0.3"
bytes = "1.2"
derive_builder = "0.11"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "net", "macros"] }
tokio-util = { version = "0.7", features = ["compat"] }
