[package]
name = "poster"
version = "0.3.1"
edition = "2021"
readme = "README.md"
description = "MQTTv5 client library written in Rust."
repository = "https://github.com/Chylynsky/poster-rs"
authors = ["Chylynsky"]
keywords = ["mqtt", "async", "client", "runtime-agnostic", "non-blocking"]
categories = ["asynchronous", "network-programming"]
license = "MIT"

[features]
default = ["dep:futures", "dep:bytes"]

[dependencies]
either = "1.11"
derive_builder = "0.20"
futures = { version = "0.3", optional = true }
bytes = { version = "1.6", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "net", "macros"] }
tokio-util = { version = "0.7", features = ["compat"] }
smol = "1.2"
clap = { version = "4", features = ["derive"] }
